Placeholder content direction should not affect INPUT/TEXTAREA direction.

Skip -webkit-input-placeholder elements when we compute direction for dir=auto in
HTMLElement::directionality.

- Using <bdi> for placeholders doesn't work. We want to inherit placeholder direction
  from the parent element.
- Using unicode-bidi CSS property doesn't work. It doesn't affect dir=auto
  computation.

BUG=623270,625739

Review-Url: https://codereview.chromium.org/2145823003
Cr-Commit-Position: refs/heads/master@{#405069}

Former-commit-id: 55f27bb5c4f4f99a2885dc67bd6e448a464505ed